Fixed start script for windows [#618]